c/src/test/resources/c/nec_inline_bnc/valid/ex5.ctrl
<controlFile>
  <sourceFile name="../ex5.c" id="1" />
  <run>
    <startPosition fileId="1" line="4" />
    <wayPoint fileId="1" line="12" />
    <endPosition fileId="1" line="16" />
  </run>
</controlFile>